--- a/fq/boardnotices/adm/style/board_notices_edit.html
+++ b/fq/boardnotices/adm/style/board_notices_edit.html
@@ -1,15 +1,15 @@
 <!-- INCLUDE overall_header.html -->
 
 <script>
-	var form_name = 'acp_board_announcements';
-	var text_name = 'board_announcements_text';
+	var form_name = 'acp_board_notice';
+	var text_name = 'board_notice_text';
 	var load_draft = false;
 	var upload = false;
-	var imageTag = false;
+	var imageTag = true;
 </script>
 
 <a id="maincontent"></a>
-
+<a href="{U_BACK}" style="float: {S_CONTENT_FLOW_END};">&laquo; {L_BACK}</a>
 <h1>{L_BOARD_NOTICES_SETTINGS}</h1>
 
 <p>{L_BOARD_NOTICES_SETTINGS_EXPLAIN}</p>
@@ -21,45 +21,40 @@
 	</div>
 <!-- ENDIF -->
 
-<form id="acp_board_announcements" method="post" action="{U_ACTION}">
+<form id="acp_board_notice" method="post" action="{U_ACTION}">
+<!-- IF NOTICE_ID -->
+<input type="hidden" name="id" value="{NOTICE_ID}" />
+<!-- ENDIF -->
 	<fieldset>
 		<legend>{L_GENERAL_OPTIONS}</legend>
 		<dl>
-			<dt><label for="board_announcements_enable">{L_BOARD_ANNOUNCEMENTS_ENABLE}{L_COLON}</label></dt>
+			<dt><label for="board_notice_enable">{L_BOARD_NOTICE_ACTIVE}{L_COLON}</label></dt>
 			<dd>
-				<label><input type="radio" class="radio" id="board_announcements_enable" name="board_announcements_enable" value="1"<!-- IF BOARD_ANNOUNCEMENTS_ENABLED --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
-				<label><input type="radio" class="radio" name="board_announcements_enable" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_ENABLED --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+				<label><input type="radio" class="radio" id="board_notice_active" name="board_notice_active" value="1"<!-- IF BOARD_NOTICE_ACTIVE --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
+				<label><input type="radio" class="radio" name="board_notice_active" value="0"<!-- IF not BOARD_NOTICE_ACTIVE --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 			</dd>
 		</dl>
 		<dl>
-			<dt><label for="board_announcements_enable">{L_BOARD_ANNOUNCEMENTS_GUESTS}{L_COLON}</label></dt>
+			<dt><label for="board_notice_title">{L_BOARD_NOTICE_TITLE}{L_COLON}</label><br /><span>{L_BOARD_NOTICE_TITLE_EXPLAIN}</span></dt>
 			<dd>
-				<label><input type="radio" class="radio" id="board_announcements_guests" name="board_announcements_guests" value="1"<!-- IF BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
-				<label><input type="radio" class="radio" name="board_announcements_guests" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_GUESTS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
-			</dd>
-		</dl>
-		<dl>
-			<dt><label for="board_announcements_dismiss">{L_BOARD_ANNOUNCEMENTS_DISMISS}{L_COLON}</label></dt>
-			<dd>
-				<label><input type="radio" class="radio" id="board_announcements_dismiss" name="board_announcements_dismiss" value="1"<!-- IF BOARD_ANNOUNCEMENTS_DISMISS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
-				<label><input type="radio" class="radio" name="board_announcements_dismiss" value="0"<!-- IF not BOARD_ANNOUNCEMENTS_DISMISS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+				<input name="board_notice_title" type="text" id="board_notice_title" value="{BOARD_NOTICE_TITLE}" size="50" maxlength="50" />
 			</dd>
 		</dl>
 	</fieldset>
 
-	<!-- IF BOARD_ANNOUNCEMENTS_PREVIEW -->
+	<!-- IF L_BOARD_NOTICE_PREVIEW -->
 		<fieldset>
-			<legend>{L_BOARD_ANNOUNCEMENTS_PREVIEW}</legend>
-			<div style="padding:10px; font-size:1.0em; overflow: auto; <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->background-color:#{BOARD_ANNOUNCEMENTS_BGCOLOR}<!-- ENDIF -->">{BOARD_ANNOUNCEMENTS_PREVIEW}</div>
+			<legend>{L_BOARD_NOTICE_PREVIEW}</legend>
+			<div style="padding:10px; font-size:1.0em; overflow: auto; <!-- IF BOARD_NOTICE_BGCOLOR -->background-color:#{BOARD_NOTICE_BGCOLOR}<!-- ENDIF -->">{BOARD_NOTICE_PREVIEW}</div>
 		</fieldset>
 	<!-- ENDIF -->
 
 	<fieldset>
-		<legend>{L_BOARD_ANNOUNCEMENTS_TEXT}</legend>
+		<legend>{L_BOARD_NOTICE_TEXT}</legend>
 		<dl>
-			<dt><label for="board_announcements_bgcolor">{L_BOARD_ANNOUNCEMENTS_BGCOLOR}{L_COLON}</label><br /><span>{L_BOARD_ANNOUNCEMENTS_BGCOLOR_EXPLAIN}</span></dt>
+			<dt><label for="board_notice_bgcolor">{L_BOARD_NOTICE_BGCOLOR}{L_COLON}</label><br /><span>{L_BOARD_NOTICE_BGCOLOR_EXPLAIN}</span></dt>
 			<dd>
-				<input name="board_announcements_bgcolor" type="text" id="board_announcements_bgcolor" value="{BOARD_ANNOUNCEMENTS_BGCOLOR}" size="6" maxlength="6" <!-- IF BOARD_ANNOUNCEMENTS_BGCOLOR -->style="border-right:20px solid #{BOARD_ANNOUNCEMENTS_BGCOLOR}"<!-- ENDIF --> />
+				<input name="board_notice_bgcolor" type="text" id="board_notice_bgcolor" value="{BOARD_NOTICE_BGCOLOR}" size="6" maxlength="6" <!-- IF BOARD_NOTICE_BGCOLOR -->style="border-right:20px solid #{BOARD_NOTICE_BGCOLOR}"<!-- ENDIF --> />
 			</dd>
 		</dl>
 
@@ -70,7 +65,7 @@
 		<dl class="responsive-columns">
 			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-height="12" data-width="15" data-bbcode="true"></dt>
 			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px;">
-				<textarea name="board_announcements_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{BOARD_ANNOUNCEMENTS_TEXT}</textarea>
+				<textarea name="board_notice_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{BOARD_NOTICE_TEXT}</textarea>
 			</dd>
 			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 5px;">
 				<!-- IF S_BBCODE_ALLOWED -->
