--- a/fq/boardnotices/adm/style/event/acp_overall_footer_after.html
+++ b/fq/boardnotices/adm/style/event/acp_overall_footer_after.html
@@ -1,4 +1,4 @@
-<!-- IF S_BOARD_NOTICES -->
+<!-- IF BOARD_NOTICES_ENABLED -->
 
 <!-- IF not $INCLUDED_COLPICKJS -->
 	<!-- INCLUDEJS @fq_boardnotices/colpick.js -->
