--- a/fq/boardnotices/adm/style/board_notices_rules.html
+++ b/fq/boardnotices/adm/style/board_notices_rules.html
@@ -1,10 +1,11 @@
 <!-- INCLUDE overall_header.html -->
 
 <a id="maincontent"></a>
+<a href="{U_BACK}" style="float: {S_CONTENT_FLOW_END};">&laquo; {L_BACK}</a>
 
-<h1>{ACP_BOARD_NOTICES_MANAGER}</h1>
+<h1>{ACP_BOARD_NOTICE_RULES}</h1>
 
-<p>{ACP_BOARD_NOTICES_MANAGER_EXPLAIN}</p>
+<p>{ACP_BOARD_NOTICE_RULES_EXPLAIN}</p>
 
 <!-- IF NOTICE -->
 	<div class="successbox">
@@ -22,9 +23,8 @@
 <table class="table1 zebra-table">
 <thead>
 <tr>
-	<th>{BOARD_NOTICE_TITLE}</th>
-	<th>{BOARD_NOTICE_RULES}</th>
-	<th>{L_ACTIVE}</th>
+	<th>{BOARD_NOTICE_RULE_NAME}</th>
+	<th>{BOARD_NOTICE_RULE_VALUE}</th>
 	<th>{L_OPTIONS}</th>
 </tr>
 </thead>
@@ -36,15 +36,18 @@
 		</tr>
 	<!-- ENDIF -->
 	<tr>
-		<td><a href="{items.EDIT_RULES_LINK}">{items.TITLE}</a></td>
-		<td style="text-align: right;">{items.RULES}</td>
-		<td style="text-align: center;">{items.ACTIVE}</td>
+		<td>{items.RULE_ID}. {items.RULE_NAME}
+			<select>
+				<option value="">Please choose a rule...</option>
+				<!-- BEGIN items.allrules -->
+				<option value="{items.allrules.COMBO_RULE_ID}" <!-- IF items.allrules.COMBO_RULE_SELECTED -->selected<!-- ENDIF -->>{items.allrules.COMBO_RULE_NAME}</option>
+				<!-- END items.allrules -->
+			</select>
+		</td>
+		<td>{items.RULE_CONDITIONS}</td>
 		<td class="actions" style="text-align: right;">
-			<span class="up-disabled" style="display:none;">{ICON_MOVE_UP_DISABLED}</span>
-			<span class="up"><a href="{items.U_MOVE_UP}" data-ajax="row_up">{ICON_MOVE_UP}</a></span>
-			<span class="down-disabled" style="display:none;">{ICON_MOVE_DOWN_DISABLED}</span>
-			<span class="down"><a href="{items.U_MOVE_DOWN}" data-ajax="row_down">{ICON_MOVE_DOWN}</a></span>
-			<a href="{items.U_EDIT}">{ICON_EDIT}</a> <a href="{items.U_DELETE}" data-ajax="row_delete">{ICON_DELETE}</a>
+			<a href="{items.U_EDIT}">{ICON_EDIT}</a>
+			<a href="{items.U_DELETE}" data-ajax="row_delete">{ICON_DELETE}</a>
 		</td>
 	</tr>
 <!-- BEGINELSE -->
@@ -60,7 +63,7 @@
 <!-- ENDIF -->
 </div>
 <p class="quick">
-	<input class="button2" name="add" type="submit" value="{BOARD_NOTICE_ADD}" />
+	<input class="button2" name="add" type="submit" value="{BOARD_NOTICE_RULE_ADD}" />
 </p>
 {S_FORM_TOKEN}
 </fieldset>
