--- a/adm/style/board_notices_rules.html
+++ b/adm/style/board_notices_rules.html
@@ -36,7 +36,7 @@
 		</tr>
 	<!-- ENDIF -->
 	<tr>
-		<td>
+		<td style="text-align: right;">
 			<select>
 				<option value="">Please choose a rule...</option>
 				<!-- BEGIN items.allrules -->
