--- a/adm/style/board_notices.html
+++ b/adm/style/board_notices.html
@@ -23,6 +23,7 @@
 <thead>
 <tr>
 	<th>{BOARD_NOTICE_TITLE}</th>
+	<th></th>
 	<th>{BOARD_NOTICE_RULES}</th>
 	<th>{L_ACTIVE}</th>
 	<th></th>
@@ -33,6 +34,7 @@
 <!-- BEGIN items -->
 	<tr>
 		<td>{items.TITLE}</td>
+		<td style="text-align: center;"><a href="{items.PREVIEW_LINK}" target="board-notices-preview">{L_PREVIEW}</a></td>
 		<td style="text-align: right;">{items.RULES}</td>
 		<td style="text-align: center;">{items.ACTIVE}</td>
 		<td style="white-space: nowrap; text-align: center; vertical-align: middle;">&nbsp;<!-- IF items.ENABLED --><a href="{items.U_DISABLE}">{L_DISABLE}</a><!-- ELSE --><a href="{items.U_ENABLE}">{L_ENABLE}</a><!-- ENDIF -->&nbsp;</td>
