--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -79,6 +79,7 @@
 				<!-- ENDIF -->
 			</dd>
 			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 10px;"><strong>{L_OPTIONS}{L_COLON} </strong>{BBCODE_STATUS} :: {IMG_STATUS} :: {FLASH_STATUS} :: {URL_STATUS} :: {SMILIES_STATUS}</dd>
+			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 10px;"><strong>{L_INFO}{L_COLON} </strong>{VARIABLES_EXPLAIN}</dd>
 		</dl>
 	</fieldset>
 	
@@ -92,6 +93,7 @@
 		<th>{BOARD_NOTICE_RULE_ACTIVE}</th>
 		<th>{BOARD_NOTICE_RULE_NAME}</th>
 		<th>{BOARD_NOTICE_RULE_VALUE}</th>
+		<th>{BOARD_NOTICE_RULE_VARIABLES}</th>
 	</tr>
 	</thead>
 	<tbody>
@@ -105,6 +107,7 @@
 				<strong>{allrules.RULE_DESCRIPTION}</strong>
 			</td>
 			<td>{allrules.RULE_CONDITIONS}</td>
+			<td>{allrules.RULE_VARIABLES}</td>
 		</tr>
 	<!-- BEGINELSE -->
 		<tr class="row3">
