Add two buttons to move a notice to first row or last row

--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -33,4 +33,9 @@ jQuery(function($) {
 });
 </script>
 
+<!-- IF not $INCLUDED_BOARDNOTICESJS -->
+	<!-- INCLUDEJS @fq_boardnotices/boardnotices.js -->
+	<!-- DEFINE $INCLUDED_BOARDNOTICESJS = true -->
+<!-- ENDIF -->
+
 <!-- ENDIF -->
