--- a/adm/style/event/acp_overall_header_head_append.html
+++ b/adm/style/event/acp_overall_header_head_append.html
@@ -1,3 +1,4 @@
 <!-- IF BOARD_NOTICES_ENABLED -->
-	<!-- INCLUDECSS colpick.css -->
+	<!-- INCLUDECSS @fq_boardnotices/boardnotices.css -->
+	<!-- INCLUDECSS @fq_boardnotices/colpick.css -->
 <!-- ENDIF -->
