Prep work for new rule, and added rule unit display

--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -82,7 +82,7 @@
 			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 10px;"><strong>{L_INFO}{L_COLON} </strong>{VARIABLES_EXPLAIN}</dd>
 		</dl>
 	</fieldset>
-	
+
 	<h1>{ACP_BOARD_NOTICE_RULES}</h1>
 
 	<p>{ACP_BOARD_NOTICE_RULES_EXPLAIN}</p>
@@ -106,7 +106,7 @@
 			<td style="text-align: right;">
 				<strong>{allrules.RULE_DESCRIPTION}</strong>
 			</td>
-			<td>{allrules.RULE_CONDITIONS}</td>
+			<td>{allrules.RULE_CONDITIONS} {allrules.RULE_UNIT}</td>
 			<td>{allrules.RULE_VARIABLES}</td>
 		</tr>
 	<!-- BEGINELSE -->
