--- a/adm/style/board_notices_settings.html
+++ b/adm/style/board_notices_settings.html
@@ -23,7 +23,7 @@
 		<legend>{{ lang('GENERAL_OPTIONS') }}</legend>
 		<dl>
 			<dt>
-				<label for="board_notices_enabled">{{ lang('LABEL_BOARD_NOTICES_ACTIVE') ~ lang('COLON') }}</label><br />
+				<label>{{ lang('LABEL_BOARD_NOTICES_ACTIVE') ~ lang('COLON') }}</label><br />
 				<span>{{ lang('BOARD_NOTICES_ACTIVE_EXPLAIN') }}</span>
 			</dt>
 			<dd>
@@ -46,7 +46,7 @@
 		<legend>{{ lang('L_FORUMS_VISITS') }}</legend>
 		<dl>
 			<dt>
-				<label for="board_notices_enabled">{{ lang('LABEL_FORUMS_VISITS_ACTIVE') ~ lang('COLON') }}</label><br />
+				<label>{{ lang('LABEL_FORUMS_VISITS_ACTIVE') ~ lang('COLON') }}</label><br />
 				<span>{{ lang('FORUMS_VISITS_ACTIVE_EXPLAIN') }}</span>
 			</dt>
 			<dd>
@@ -68,7 +68,7 @@
 	<form id="action_forum_visits_form" method="post" action="{{ U_ACTION }}" data-ajax="true">
 		<dl>
 			<dt>
-				<label for="action_forum_visits">{{ lang('L_RESET_FORUM_VISITS') }}</label><br />
+				<label>{{ lang('L_RESET_FORUM_VISITS') }}</label><br />
 				<span>{{ lang('L_RESET_FORUM_VISITS_EXPLAIN') }}</span>
 			</dt>
 			<dd>
