--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -9,7 +9,7 @@
 </script>
 
 <a id="maincontent"></a>
-<a href="{U_BACK}" style="float: {S_CONTENT_FLOW_END};">&laquo; {L_BACK}</a>
+<a href="{{ U_BACK }}" style="float: {{ S_CONTENT_FLOW_END }};">&laquo; {{ lang('BACK') }}</a>
 
 <h1>{{ lang('ACP_BOARD_NOTICE_SETTINGS') }}</h1>
 
@@ -62,22 +62,22 @@
 
 		<dl class="responsive-columns">
 			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-height="12" data-width="15" data-bbcode="true"></dt>
-			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px;">
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px;">
 				<textarea name="board_notice_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{BOARD_NOTICE_TEXT}</textarea>
 			</dd>
-			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 5px;">
-				<!-- IF S_BBCODE_ALLOWED -->
-					<label><input type="checkbox" class="radio" name="disable_bbcode"<!-- IF S_BBCODE_DISABLE_CHECKED --> checked="checked"<!-- ENDIF --> /> {L_DISABLE_BBCODE}</label>
-				<!-- ENDIF -->
-				<!-- IF S_SMILIES_ALLOWED -->
-					<label><input type="checkbox" class="radio" name="disable_smilies"<!-- IF S_SMILIES_DISABLE_CHECKED --> checked="checked"<!-- ENDIF --> /> {L_DISABLE_SMILIES}</label>
-				<!-- ENDIF -->
-				<!-- IF S_LINKS_ALLOWED -->
-					<label><input type="checkbox" class="radio" name="disable_magic_url"<!-- IF S_MAGIC_URL_DISABLE_CHECKED --> checked="checked"<!-- ENDIF --> /> {L_DISABLE_MAGIC_URL}</label>
-				<!-- ENDIF -->
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 5px;">
+				{% if S_BBCODE_ALLOWED %}
+					<label><input type="checkbox" class="radio" name="disable_bbcode"{% if S_BBCODE_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_BBCODE') }}</label>
+				{% endif %}
+				{% if S_SMILIES_ALLOWED %}
+					<label><input type="checkbox" class="radio" name="disable_smilies"{% if S_SMILIES_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_SMILIES') }}</label>
+				{% endif %}
+				{% if S_LINKS_ALLOWED %}
+					<label><input type="checkbox" class="radio" name="disable_magic_url"{% if S_MAGIC_URL_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_MAGIC_URL') }}</label>
+				{% endif %}
 			</dd>
-			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 10px;"><strong>{L_OPTIONS}{L_COLON} </strong>{BBCODE_STATUS} :: {IMG_STATUS} :: {FLASH_STATUS} :: {URL_STATUS} :: {SMILIES_STATUS}</dd>
-			<dd style="margin-{S_CONTENT_FLOW_BEGIN}: 90px; margin-top: 10px;"><strong>{L_INFO}{L_COLON} </strong>{VARIABLES_EXPLAIN}</dd>
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{L_OPTIONS}{L_COLON} </strong>{BBCODE_STATUS} :: {IMG_STATUS} :: {FLASH_STATUS} :: {URL_STATUS} :: {SMILIES_STATUS}</dd>
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{L_INFO}{L_COLON} </strong>{VARIABLES_EXPLAIN}</dd>
 		</dl>
 
 		<dl>
@@ -88,44 +88,44 @@
 		</dl>
 	</fieldset>
 
-	<h1>{ACP_BOARD_NOTICE_RULES}</h1>
+	<h1>{{ lang('ACP_BOARD_NOTICE_RULES') }}</h1>
 
-	<p>{ACP_BOARD_NOTICE_RULES_EXPLAIN}</p>
+	<p>{{ lang('ACP_BOARD_NOTICE_RULES_EXPLAIN') }}</p>
 
 	<table class="table1 zebra-table">
 	<thead>
 	<tr>
-		<th>{BOARD_NOTICE_RULE_ACTIVE}</th>
-		<th>{BOARD_NOTICE_RULE_NAME}</th>
-		<th>{BOARD_NOTICE_RULE_VALUE}</th>
-		<th>{BOARD_NOTICE_RULE_VARIABLES}</th>
+		<th>{{ lang('BOARD_NOTICE_RULE_ACTIVE') }}</th>
+		<th>{{ lang('BOARD_NOTICE_RULE_NAME') }}</th>
+		<th>{{ lang('BOARD_NOTICE_RULE_VALUE') }}</th>
+		<th>{{ lang('BOARD_NOTICE_RULE_VARIABLES') }}</th>
 	</tr>
 	</thead>
 	<tbody>
-	<!-- BEGIN allrules -->
-		<tr data-id="{allrules.RULE_NAME}" class="<!-- IF allrules.NOTICE_RULE_CHECKED -->active-rule<!-- ELSE -->inactive-rule<!-- ENDIF -->">
+	{% for rule in allrules %}
+		<tr data-id="{{ rule.RULE_NAME }}" class="{% if rule.NOTICE_RULE_CHECKED %}active-rule{% else %}inactive-rule{% endif %}">
 			<td class="boardnotice-checkbox">
-				<input type="hidden" name="notice_rule_id[{allrules.RULE_NAME}]" value="{allrules.NOTICE_RULE_ID}" />
-				<input type="checkbox" name="notice_rule_checked[{allrules.RULE_NAME}]" data-rule="checkbox" data-id="{allrules.RULE_NAME}" value="1"<!-- IF allrules.NOTICE_RULE_CHECKED --> checked<!-- ENDIF -->/>
+				<input type="hidden" name="notice_rule_id[{{ rule.RULE_NAME }}]" value="{{ rule.NOTICE_RULE_ID }}" />
+				<input type="checkbox" name="notice_rule_checked[{{ rule.RULE_NAME }}]" data-rule="checkbox" data-id="{{ rule.RULE_NAME }}" value="1"<!-- IF rule.NOTICE_RULE_CHECKED --> checked<!-- ENDIF -->/>
 			</td>
 			<td class="boardnotice-description">
-				<strong>{allrules.RULE_DESCRIPTION}</strong>
+				<strong>{{ rule.RULE_DESCRIPTION }}</strong>
 			</td>
-			<td class="boardnotice-conditions">{allrules.RULE_CONDITIONS} {allrules.RULE_UNIT}</td>
-			<td class="boardnotice-variables">{allrules.RULE_VARIABLES}</td>
+			<td class="boardnotice-conditions">{{ rule.RULE_CONDITIONS }} {{ rule.RULE_UNIT }}</td>
+			<td class="boardnotice-variables">{{ rule.RULE_VARIABLES }}</td>
 		</tr>
-	<!-- BEGINELSE -->
+	{% else %}
 		<tr class="row3">
-			<td colspan="{ALLRULES_COLSPAN}">{L_ACP_NO_ITEMS}</td>
+			<td colspan="{{ ALLRULES_COLSPAN }}">{{ lang('ACP_NO_ITEMS') }}</td>
 		</tr>
-	<!-- END allrules -->
+	{% endfor %}
 	</tbody>
 	</table>
 
 	<fieldset class="submit-buttons">
-		<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
-		<input class="button2" type="submit" name="preview" value="{L_PREVIEW}" />
-		{S_FORM_TOKEN}
+		<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
+		<input class="button2" type="submit" name="preview" value="{{ lang('PREVIEW') }}" />
+		{{ S_FORM_TOKEN }}
 	</fieldset>
 </form>
 
