--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -29,14 +29,14 @@
 	<fieldset>
 		<legend>{{ lang('GENERAL_OPTIONS') }}</legend>
 		<dl>
-			<dt><label for="board_notice_enable">{LABEL_BOARD_NOTICE_ACTIVE}{L_COLON}</label></dt>
+			<dt><label for="board_notice_enable">{{ lang('LABEL_BOARD_NOTICE_ACTIVE') ~ lang('COLON') }}</label></dt>
 			<dd>
 				<label><input type="radio" class="radio" id="board_notice_active" name="board_notice_active" value="1"<!-- IF BOARD_NOTICE_ACTIVE --> checked="checked"<!-- ENDIF --> /> {{ lang('YES') }}</label>
 				<label><input type="radio" class="radio" name="board_notice_active" value="0"<!-- IF not BOARD_NOTICE_ACTIVE --> checked="checked"<!-- ENDIF --> /> {{ lang('NO') }}</label>
 			</dd>
 		</dl>
 		<dl>
-			<dt><label for="board_notice_title">{LABEL_BOARD_NOTICE_TITLE}{L_COLON}</label><br /><span>{BOARD_NOTICE_TITLE_EXPLAIN}</span></dt>
+			<dt><label for="board_notice_title">{{ lang('LABEL_BOARD_NOTICE_TITLE') ~ lang('COLON') }}</label><br /><span>{BOARD_NOTICE_TITLE_EXPLAIN}</span></dt>
 			<dd>
 				<input name="board_notice_title" type="text" id="board_notice_title" value="{BOARD_NOTICE_TITLE}" size="50" maxlength="100" />
 			</dd>
@@ -45,17 +45,17 @@
 
 	{% if BOARD_NOTICE_PREVIEW %}
 		<fieldset>
-			<legend>{LABEL_BOARD_NOTICE_PREVIEW}</legend>
-			<div style="padding:10px; font-size:1.0em; overflow: auto; <!-- IF BOARD_NOTICE_BGCOLOR -->background-color:#{BOARD_NOTICE_BGCOLOR}<!-- ENDIF -->">{BOARD_NOTICE_PREVIEW}</div>
+			<legend>{{ lang('LABEL_BOARD_NOTICE_PREVIEW') }}</legend>
+			<div style="padding:10px; font-size:1.0em; overflow: auto; {% if BOARD_NOTICE_BGCOLOR %}background-color:#{{ BOARD_NOTICE_BGCOLOR }}{% endif %}">{{ BOARD_NOTICE_PREVIEW }}</div>
 		</fieldset>
 	{% endif %}
 
 	<fieldset>
-		<legend>{LABEL_BOARD_NOTICE_TEXT}</legend>
+		<legend>{{ lang('LABEL_BOARD_NOTICE_TEXT') }}</legend>
 		<dl>
-			<dt><label for="board_notice_bgcolor">{LABEL_BOARD_NOTICE_BGCOLOR}{L_COLON}</label><br /><span>{LABEL_BOARD_NOTICE_BGCOLOR_EXPLAIN}</span></dt>
+			<dt><label for="board_notice_bgcolor">{{ lang('LABEL_BOARD_NOTICE_BGCOLOR') ~ lang('COLON') }}</label><br /><span>{{ lang('LABEL_BOARD_NOTICE_BGCOLOR_EXPLAIN') }}</span></dt>
 			<dd>
-				<input name="board_notice_bgcolor" type="text" id="board_notice_bgcolor" value="{BOARD_NOTICE_BGCOLOR}" size="6" maxlength="6" <!-- IF BOARD_NOTICE_BGCOLOR -->style="border-right:20px solid #{BOARD_NOTICE_BGCOLOR}"<!-- ENDIF --> />
+				<input name="board_notice_bgcolor" type="text" id="board_notice_bgcolor" value="{BOARD_NOTICE_BGCOLOR}" size="6" maxlength="6" {% if BOARD_NOTICE_BGCOLOR %}style="border-right:20px solid #{{ BOARD_NOTICE_BGCOLOR }}"{% endif %} />
 			</dd>
 		</dl>
 		{% include 'acp_posting_buttons.html' %}
@@ -63,7 +63,7 @@
 		<dl class="responsive-columns">
 			<dt style="width: 90px;" id="color_palette_placeholder" data-orientation="v" data-height="12" data-width="15" data-bbcode="true"></dt>
 			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px;">
-				<textarea name="board_notice_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{BOARD_NOTICE_TEXT}</textarea>
+				<textarea name="board_notice_text" rows="10" cols="60" style="width: 95%;" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" data-bbcode="true">{{ BOARD_NOTICE_TEXT }}</textarea>
 			</dd>
 			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 5px;">
 				{% if S_BBCODE_ALLOWED %}
@@ -76,12 +76,12 @@
 					<label><input type="checkbox" class="radio" name="disable_magic_url"{% if S_MAGIC_URL_DISABLE_CHECKED %} checked="checked"{% endif %} /> {{ lang('DISABLE_MAGIC_URL') }}</label>
 				{% endif %}
 			</dd>
-			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{L_OPTIONS}{L_COLON} </strong>{BBCODE_STATUS} :: {IMG_STATUS} :: {FLASH_STATUS} :: {URL_STATUS} :: {SMILIES_STATUS}</dd>
-			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{L_INFO}{L_COLON} </strong>{VARIABLES_EXPLAIN}</dd>
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{{ lang('OPTIONS') ~ lang('COLON') }} </strong>{{ lang('BBCODE_IS_ON') }} :: {{ lang('IMAGES_ARE_ON') }} :: {{ lang('URL_IS_ON') }} :: {{ lang('SMILIES_ARE_ON') }}</dd>
+			<dd style="margin-{{ S_CONTENT_FLOW_BEGIN }}: 90px; margin-top: 10px;"><strong>{{ lang('INFORMATION') ~ lang('COLON') }} </strong>{{ lang('VARIABLES_EXPLAIN') }}</dd>
 		</dl>
 
 		<dl>
-			<dt><label for="board_notice_style">{LABEL_BOARD_NOTICE_STYLE}{L_COLON}</label><br /><span>{LABEL_BOARD_NOTICE_STYLE_EXPLAIN}</span></dt>
+			<dt><label for="board_notice_style">{{ lang('LABEL_BOARD_NOTICE_STYLE') ~ lang('COLON') }}</label><br /><span>{{ lang('LABEL_BOARD_NOTICE_STYLE_EXPLAIN') }}</span></dt>
 			<dd>
 				<input name="board_notice_style" type="text" id="board_notice_style" value="{BOARD_NOTICE_STYLE}" size="20" maxlength="50" />
 			</dd>
